--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
-bevy = "0.8.1"
+bevy = { version = "0.8.1", features = ["dynamic"] }
